Bug 1606655 - Make `NativeKey` stop adding alternative char codes while user inputs a Unicode character with `Alt` + some numpad keys r=m_kato

Custom keyboard layout may set unusual character to each numpad key.  In our
shortcut and acceleration key handling, we refer alternative char code values
stored in `eKeyDown` or `eKeyPress` and they may contain an alphabet which is
used by menubar but it shouldn't be performed while user inputs a Unicode
character with `Alt` + numpad keys because it's being handled by Windows.
(In strictly speaking, I think that we shouldn't dispatch key events of the
sequence, but Chrome does it so that we should keep dispatching for web-compat.)

This patch makes `NativeKey` stores same `mCommittedCharsAndModifiers`,
`mShiftedString` and `mUnshiftedString` values as usual keyboard layout
even active keyboard layout customized numpad key values.

Note that Windows handles the key sequence without virtual key code, meaning
that even if the numpad keys are shuffled by keyboard layout, typed numbers
are computed from physical key position.  E.g., even if `Numpad7` is mapped
to `1`, it's treated as `7`.  Therefore, this patch refers scan code in
some places.

Differential Revision: https://phabricator.services.mozilla.com/D60805

--HG--
extra : moz-landing-system : lando